# UCI-Chess-Engine

./: .clang-format  .gitattributes  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
book/: book.csv
scripts/: msvc_env.bat
src/: CMakeLists.txt  main.cpp
src/core/: BoardState.cpp  BoardState.h  CMakeLists.txt  EndOfGameChecker.cpp  EndOfGameChecker.h  Engine.cpp  Engine.h  Evaluate.cpp  Evaluate.h  King.cpp  King.h  Knight.h  Move.cpp  Move.h  MoveGenerator.h  OpeningBook.cpp  OpeningBook.h  Pawn.h  PieceBitBoards.cpp  PieceBitBoards.h  PieceType.cpp  PieceType.h  TranspositionTable.cpp  TranspositionTable.h  ZobristHash.cpp  ZobristHash.h
src/core/magic-bits-master/include/: magic_bits.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/uci/: CMakeLists.txt  Interface.cpp  Interface.h
test/performance_tests/: CMakeLists.txt  enginePerformance.cpp
test/performance_tests/positions/: mostly_middle_game_positions.epd
test/unit_tests/: CMakeLists.txt  evaluation.cpp  fenParser.cpp  knightMovesGeneration.cpp  movesGeneration.cpp  pawnMovesGeneration.cpp
test/unit_tests/perft_positions/: perftsuite.epd
